# Book-Call-Number-Detection

./: CMakeLists.txt  README.txt  blob  blob.cpp  main.cpp  square.cpp  tesseract  tesseract.cpp  textsq  textsq.cpp  threshold  threshold.cpp
testphoto/: Thumbs.db
